@@ -1,0 +1,56 @@
+#!/bin/sh
+
+# This is a RackTables gateway for router configuration export. The configuration
+# is fed in arbitrary format and should only be somehow sent to the remote host
+# for further processing. This is a quick hack and should be replaced with a
+# generic file sender gateway in future.
+#
+# The only supported command is:
+#
+# * submit <username> <endpoint> <filename>: send the file
+#
+
+user=
+endpoint=
+cfgfile=
+MYDIR=`dirname $0`
+
+do_submit()
+{
+	user=`echo $args | cut -s -d' ' -f1`
+	endpoint=`echo $args | cut -s -d' ' -f2`
+	cfgfile=`echo $args | cut -s -d' ' -f3`
+	# sanity checks
+	if [ -z "$user" -o -z "$endpoint" -o -z "$cfgfile" ]; then
+		echo 'ERR!invalid arguments'
+		return
+	fi
+	if [ ! -s "$cfgfile" ]; then
+		echo "ERR!File $cfgfile is either missing or empty."
+		return
+	fi
+	if [ ! -x "$MYDIR/install" ]; then
+		echo "ERR!Cannot execute $MYDIR/install"
+		return
+	fi
+	"$MYDIR/install" $user $endpoint $cfgfile
+	ret=$?
+	if [ $ret = 0 ]; then
+		echo "OK!File sent successfully"
+	else
+		echo "ERR!File installer returned code $ret"
+	fi
+}
+
+# main loop
+while read cmd args; do
+	case $cmd in
+		submit)
+			do_submit $args
+			;;
+		*)
+			echo "ERR!unknown command $cmd"
+	esac
+done
+
+exit 0
