@@ -1,6 +1,8 @@
 0.16.2
 	bugfix: IP address picker was broken
 	bugfix: more message processing fixes
+	new feature: "router" addresses allocations
+	new feature: router configuration exporter
 0.16.1 2008-07-30
 	new feature: pre-assigned tags for new VS and RS pools records
 	new feature: cache RackCode parse tree for better performance
